--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I received my BA in Physics from Bard College in 2018. After a three year adventure working in the tech industry, my heart told me that it was time to return to astronomy.
+                    I received my BA in Physics from Bard College in 2018. After a three year hiatus working in the tech industry, my heart told me that it was time to return to astronomy.
                   </p>
                   <p>  
-                    I will complete my PhD at New Mexico State University by 2026, I am working with Dr. Moire Prescott doing extragalactic research, we have engineered an open-source program that classifies high-redshift Lyman-alpha blobs by employing an image-moment-based ensemble machine learning engine followed by a deep learning convolutional neural network using deep broadband imaging data.
+                    I started my Ph.D. in 2021 at New Mexico State University, where I began extragalactic research with Dr. Moire Prescott. We engineered an open-source program that classifies high-redshift Lyman-alpha blobs using deep broadband imaging data. Our framework employs an image-moment-based ensemble machine learning engine followed by a deep learning convolutional neural network, and minimizes the need for human inspection. We achieved filtering capabilities of over 99% in a pilot study, in which we identified ~100 candidates out of a survey of over 2 million cataloged objects.
                   </p>
                   <p> 
-                    I'm also a part of the NMSU Computational Astrophysics group led by Dr. Wladimir Lyra, we use supercomputers to study planet formation theory. Using the Pencil Code, we constructed state-of-the-art three-dimensional hydrodynamical models in the shearing-box approximation to investigate the mass budget problem in protoplanetary disks. We conducted radiative transfer calculations on the (sub)-mm dust emission to calculate how much mass an observer estimates in varying conditions, finding that if the streaming instability is indeed driving dense dust filaments and planetesimal formation, then protoplanetary disk masses are severely underestimated by over an order of magnitude. 
+                    I'm also part of the NMSU Computational Astrophysics group with Dr. Wladimir Lyra. We use supercomputers to study planet formation theory, constructing advanced 3D hydrodynamical models with the Pencil Code. We conducted radiative transfer calculations on the (sub)-mm dust emission to calculate how much mass an observer estimates in varying conditions, finding that if the streaming instability is indeed driving dense dust filaments and planetesimal formation, then protoplanetary disk masses are severely underestimated by over an order of magnitude. 
                   </p>
                   <p>
                     All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know.
