--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including <a style="font-weight:bold" href="https://github.com/Professor-G/LIA">microlensing events</a> and <a style="font-weight:bold" href="https://github.com/Professor-G/pyBIA">Lyman-alpha blobs.</a></p>
+              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including <a style="font-weight:bold" href="https://github.com/Professor-G/LIA">microlensing events</a> and <a style="font-weight:bold" href="https://github.com/Professor-G/pyBIA">Lyman-alpha blobs.</a> All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know. </p>
 
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
@@ -79,20 +79,17 @@
                 <div class="box-wrap text-md-left">
                   <h2 class="heading">about</h2>
                   <p>
-                    I received my BA in Physics from Bard College in 2018. After a three year hiatus working in the tech industry, my heart told me that it was time to return to astronomy.
+                    I received my BA in Physics from Bard College in 2018. After a three year hiatus working in the tech industry, my heart told me that it was time to return to astronomy. I started my Ph.D. in 2021 at New Mexico State University, where I began extragalactic research with Dr. Moire Prescott. We engineered an open-source program that classifies high-redshift Lyman-alpha blobs using deep broadband imaging data. Our framework employs an image-moment-based ensemble machine learning engine followed by a deep learning convolutional neural network, and minimizes the need for human inspection. We achieved filtering capabilities of over 99% in a pilot study, in which we identified ~100 candidates out of a survey of over 2 million cataloged objects.
                   </p>
                   <p>  
-                    I started my Ph.D. in 2021 at New Mexico State University, where I began extragalactic research with Dr. Moire Prescott. We engineered an open-source program that classifies high-redshift Lyman-alpha blobs using deep broadband imaging data. Our framework employs an image-moment-based ensemble machine learning engine followed by a deep learning convolutional neural network, and minimizes the need for human inspection. We achieved filtering capabilities of over 99% in a pilot study, in which we identified ~100 candidates out of a survey of over 2 million cataloged objects.
+                    I'm also part of the NMSU Computational Astrophysics group led by Dr. Wladimir Lyra. We use supercomputers to study planet formation theory, constructing advanced 3D hydrodynamical models using the Pencil Code. We conducted radiative transfer calculations on the (sub)-mm thermal emission to calculate how much disk dust mass an observer estimates, finding that if the streaming instability is indeed driving dense dust filaments and planetesimal formation, then protoplanetary disk masses are severely underestimated by over an order of magnitude.
                   </p>
                   <p> 
-                    I'm also part of the NMSU Computational Astrophysics group with Dr. Wladimir Lyra. We use supercomputers to study planet formation theory, constructing advanced 3D hydrodynamical models with the Pencil Code. We conducted radiative transfer calculations on the (sub)-mm dust emission to calculate how much mass an observer estimates in varying conditions, finding that if the streaming instability is indeed driving dense dust filaments and planetesimal formation, then protoplanetary disk masses are severely underestimated by over an order of magnitude. 
-                  </p>
-                  <p>
-                    All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know.
+                    I'm involved in a variety of other interesting projects, see below for my current research pursuits.
                   </p>
                 </div>
               </div>
-              <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>
+              <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/id_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>
             </div>
           </div>
           </section>
