--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect rare transients and objects of interest, including <a style="font-weight:bold" href="https://github.com/Professor-G/LIA">microlensing events</a> and <a style="font-weight:bold" href="https://github.com/Professor-G/pyBIA">Lyman-alpha blobs.</a> All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a> I actively maintain these repositories so installation should be hassle-free, but if it's not, please let me know. </p>
+              <p class="big postfix-xl-right--30">Fascinated by the novel computational techniques that are making big data astronomy possible, I have applied machine learning to detect astrophysical transients and other rare astronomical objects, including <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> All of my projects are under a General Pubic License, and can be found on my <a href="https://github.com/Professor-G"><b>GitHub.</b></a></p>
 
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
@@ -85,7 +85,7 @@
                     I'm also part of the NMSU Computational Astrophysics group led by Dr. Wladimir Lyra. We use supercomputers to study planet formation theory, constructing advanced 3D hydrodynamical models using the Pencil Code. We conducted radiative transfer calculations on the (sub)-mm thermal emission to calculate how much disk dust mass an observer estimates, finding that if the streaming instability is indeed driving dense dust filaments and planetesimal formation, then protoplanetary disk masses are severely underestimated by over an order of magnitude.
                   </p>
                   <p> 
-                    I'm involved in a variety of other interesting projects, see below for my current research pursuits.
+                    I'm involved in a variety of other interesting projects, see below to learn about my research interests.
                   </p>
                 </div>
               </div>
