--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -36,10 +36,10 @@
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
                   <li class="active"><a href="#home">Home</a></li>
-                  <li><a href="#intro">Introduction</a></li>
-                  <li><a href="#section1">Section 1</a></li>
-                  <li><a href="#section2">Section 2</a></li>
-                  <li><a href="#conclusion">Conclusion</a></li>
+                  <li><a href="#intro">Food!</a></li>
+                  <li><a href="#section1">More Food!</a></li>
+                  <li><a href="#section2">Even More Food!</a></li>
+                  <li><a href="#conclusion">I Just Love Food!!!</a></li>
                 </ul>
               </div>
             </div>
@@ -74,18 +74,21 @@
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
                 <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Introduction</h2>
+                  <h2 class="heading">Food!</h2>
                   <p>
-                    Par1
+                    <img src="../../images/Food1.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>  
-                    Par2
+                    <img src="../../images/Food2.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>
-                    Par3
+                    <img src="../../images/Food3.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>
-                    Par4 
+                    <img src="../../images/Food4.jpg" alt="" class="img-responsive"></a>
+                  </p>
+                  <p>
+                    <img src="../../images/Food5.jpg" alt="" class="img-responsive"></a>
                   </p>
               </div>
               <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
@@ -99,7 +102,7 @@
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
                 <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Section 1</h2>
+                  <h2 class="heading">More Food!</h2>
                   <p>
                     Par1
                   </p>
@@ -123,7 +126,7 @@
             <div class="range text-center">
               <div class="cell-lg-5 text-md-left text-lg-right">
                 <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Section 2</h2>
+                  <h2 class="heading">Even More Food!</h2>
                   <p>
                     Par1
                   </p>
@@ -148,9 +151,9 @@
         <div id="conclusion" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-md-5 cell-xl-3">
-              <h2 class="heading heading-mod">Conclusion</h2>
+              <h2 class="heading heading-mod">I Just Love Food!!!</h2>
               <!--<div class="count count-white"></div>-->
-              <p>Concluding paragraph.</p>
+              <p></p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
             </div>
