--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -104,16 +104,19 @@
                 <!--<div class="count count-porcelain"></div>-->
                   <h2 class="heading">More Food!</h2>
                   <p>
-                    Par1
+                    <img src="../../images/Food6.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>  
-                    Par2
+                    <img src="../../images/Food7.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>
-                    Par3
+                    <img src="../../images/Food8.jpg" alt="" class="img-responsive"></a>
                   </p>
                   <p>
-                    Par4 
+                    <img src="../../images/Food9.jpg" alt="" class="img-responsive"></a>
+                  </p>
+                  <p>
+                    <img src="../../images/Food10.jpg" alt="" class="img-responsive"></a>
                   </p>
               </div>
              <!-- <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
@@ -128,17 +131,27 @@
                 <!--<div class="count count-porcelain"></div>-->
                   <h2 class="heading">Even More Food!</h2>
                   <p>
-                    Par1
+                    <p>
+                    <img src="../../images/Food11.jpg" alt="" class="img-responsive"></a>
+                  </p>
                   </p>
                   <p>  
-                    Par2
+                    <p>
+                    <img src="../../images/Food12.jpg" alt="" class="img-responsive"></a>
+                  </p>
                   </p>
                   <p>
-                    Par3
+                    <p>
+                    <img src="../../images/Food13.jpg" alt="" class="img-responsive"></a>
+                  </p>
                   </p>
                   <p>
-                    Par4 
+                    <p>
+                    <img src="../../images/Food14.jpg" alt="" class="img-responsive"></a>
                   </p>
+                  <p>
+                    <img src="../../images/Food15.jpg" alt="" class="img-responsive"></a>
+                  </p> 
               </div>
               <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
             </div>
