--- a/science/yum/index.html
+++ b/science/yum/index.html
@@ -57,7 +57,7 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Yum!<br class="hidden visible-lg-inline-block">
               </h1>
-              <p class="big postfix-xl-right--30">Even when you're sad delicious food is still delicious.</p>
+              <p class="big postfix-xl-right--30">Even when you're sad, delicious food is still delicious.</p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
