--- a/science/blobs/catalog/index.html
+++ b/science/blobs/catalog/index.html
@@ -50,8 +50,8 @@
         <div class="shell shell-wide">
           <div class="range range-md-middle">
             <div class="cell-md-6">
-              <a href="../" class="brand">
-                <img src="../../images/lya_blob.jpg" alt="" class="img-responsive">
+              <a href="../../" class="brand">
+                <img src="../../../images/lya_blob.jpg" alt="" class="img-responsive">
               </a>
             </div>
             <div class="cell-md-6 text-md-right">
@@ -65,7 +65,7 @@
               <h1>Lyman-alpha Blobs Catalog</h1>
               <p class="big postfix-xl-right--30">
                 <!-- You can add an introductory paragraph here -->
-                Welcome to the comprehensive catalog of Lyman-alpha Blobs compiled during my PhD research.
+                This page hosts the catalog of Lyman-alpha Blobs in the COSMOS field, compiled as part my PhD dissertation.
               </p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
@@ -76,12 +76,7 @@
       </header>
       <!-- Page Content-->
       <main class="page-content">
-        <!-- Remove or comment out existing sections -->
-        <!--
-        <section class="bg-white section-50 section-lg-80 section-xl-100">
-          <!-- Existing content -->
-        <!--</section>
-        -->
+   
 
         <!-- Insert the catalog table here -->
         <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
