--- a/science/blobs/index.html
+++ b/science/blobs/index.html
@@ -11,10 +11,6 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="../../css/style.css">
-    <!--[if lt IE 10]>
-    <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-    <script src="js/html5shiv.min.js"></script>
-    <![endif]-->
   </head>
   <body>
     <!-- Page-->
@@ -25,39 +21,22 @@
       </div>
       <!-- Page Header-->
       <header class="page-head bg-image bg-image-1 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-        <!-- RD Navbar-->
-        <div class="rd-navbar-wrap">
-          <nav data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" class="rd-navbar">
-            <div class="rd-navbar-inner">
-              <div class="rd-navbar-panel">
-                <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-              </div>
-              <div class="rd-navbar-nav-wrap">
-                <!-- RD Navbar Nav-->
-                <ul class="rd-navbar-nav">
-                  <li class="active"><a href="#home">Home</a></li>
-                  <li><a href="#intro">Introduction</a></li>
-                  <li><a href="#section1">Section 1</a></li>
-                  <li><a href="#section2">Section 2</a></li>
-                  <li><a href="#conclusion">Conclusion</a></li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </div>
         <div class="shell shell-wide">
           <div class="range range-md-middle">
-            <div class="cell-md-6"><a href="../" class="brand"><img src="../../images/lya_blob.jpg" alt="" class="img-responsive"></a></div>
-            <div class="cell-md-6 text-md-right">
-            </div>
+            <div class="cell-md-6"><a href="../../" class="brand"><img src="../../images/home.png" width="75" height="75" alt="" class="img-responsive"></a></div>
           </div>
         </div>
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1>Lyman-alpha Blobs<br class="hidden visible-lg-inline-block">
+              <h1><b><u>My Work on Lyman-alpha Blobs<br class="hidden visible-lg-inline-block"></u></b>
               </h1>
-              <p class="big postfix-xl-right--30">Lyman-alpha nebulae, also known as "Lyman-alpha blobs", are the largest structures in the universe. These giant blobs can be over 100 kpc in size, and are extremely bright as a result of the many galaxies that reside within. These nebulae are galaxy nurseries, and one can imagine that at some point, our galaxy, as well as those in our local group, were part of a Lyman-alpha blob which has since dispersed. As these structures host active galaxy formation, they are found at redshifts 2-3, which corresponds to over 10 billion years ago! These lyman-alpha emitters hold many clues to understanding cosmic evolution, but the problem is that they are extremely rare, so my goal is to find as many of these blobs as possible. </p>
+              &nbsp;
+              &nbsp;
+              &nbsp;
+ 
+              <font size="+3"><p><b><a href="catalog">LAB COSMOS Catalog</a></b></p>
+              <p><b><a href="https://github.com/Professor-G">My PhD Thesis</a></b></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
@@ -66,91 +45,15 @@
         </div>
       </header>
       <!-- Page Content-->
-      <main class="page-content">
-        <!-- About-->
-        <!--<section class="bg-white section-50 section-lg-80 section-xl-100">-->
-          <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
-          <div id="intro" data-type="anchor" class="shell shell-wide">
-            <div class="range text-center">
-              <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Introduction</h2>
-                  <p>
-                    <iframe src="https://professor-g.github.io/jekyll-slideshow/slides/my-pics1.html" width="100%" height="100%" style="border: none;"></iframe>
-                  </p>
-                  <p>  
-                    Par2
-                  </p>
-                  <p>
-                    Par3
-                  </p>
-                  <p>
-                    Par4 
-                  </p>
-              </div>
-              <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
-            </div>
-          </div>
-        </section>
 
-        <!-- Research-->
-          <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-          <div id="section1" data-type="anchor" class="shell shell-wide">
-            <div class="range text-center">
-              <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Section 1</h2>
-                  <p>
-                    Par1
-                  </p>
-                  <p>  
-                    Par2
-                  </p>
-                  <p>
-                    Par3
-                  </p>
-                  <p>
-                    Par4 
-                  </p>
-              </div>
-             <!-- <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
-            </div>
-          </div>
-        </section>
-        <!-- Space news-->
-        <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100"><section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
-          <div id="section2" data-type="anchor" class="shell shell-wide">
-            <div class="range text-center">
-              <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                  <h2 class="heading">Section 2</h2>
-                  <p>
-                    Par1
-                  </p>
-                  <p>  
-                    Par2
-                  </p>
-                  <p>
-                    Par3
-                  </p>
-                  <p>
-                    Par4 
-                  </p>
-              </div>
-              <!--<div class="cell-lg-preffix-1 cell-lg-6"><img src="images/home-02.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>-->
-            </div>
-          </div>
-        </section>
-
-      </main>
       <!-- Page Footer-->
       <footer class="page-foot bg-image bg-image-3 bg-fixed">
-        <div id="conclusion" data-type="anchor" class="shell shell-wide">
+        <div id="contacts" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-md-5 cell-xl-3">
-              <h2 class="heading heading-mod">Conclusion</h2>
+              <h2 class="heading heading-mod">contact</h2>
               <!--<div class="count count-white"></div>-->
-              <p>Concluding paragraph.</p>
+              <p>If you have questions or just wish to chat, please send me a message. If you're interested in astronomy research let me know!</p>
             </div>
             <div class="cell-md-preffix-1 cell-md-6 cell-xl-preffix-1 cell-xl-3">
             </div>
@@ -201,7 +104,7 @@
     </div>
 
     <!-- Java script-->
-    <script src="../../js/core.min.js"></script>
-    <script src="../../js/script.js"></script>
+    <script src="../js/core.min.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
