--- a/science/blobs/catalog/index.html
+++ b/science/blobs/catalog/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../../images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="../../../css/style.css">
@@ -18,7 +18,7 @@
     <!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;">
       <a href="http://windows.microsoft.com/en-US/internet-explorer/">
-        <img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today.">
+        <img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser.">
       </a>
     </div>
     <script src="js/html5shiv.min.js"></script>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="cell-lg-3 text-lg-center cell-xl-10 text-xl-left offset-xl-top-110">
                   <a href="index.html" class="brand preffix-xl-left-30">
-                    <img src="../../images/wave.jpg" width="235" height="142" alt="" class="img-responsive">
+                    <img src="../../../images/wave.jpg" width="235" height="142" alt="" class="img-responsive">
                   </a>
                   <span class="copyright">&#169; <span id="copyright-year"></span> | <span>All Rights Reserved</span></span>
                 </div>
@@ -154,8 +154,8 @@
     </div>
 
     <!-- JavaScript-->
-    <script src="../../js/core.min.js"></script> <!-- Assuming this includes jQuery -->
-    <script src="../../js/script.js"></script> <!-- Your custom scripts -->
+    <script src="../../../js/core.min.js"></script> <!-- Assuming this includes jQuery -->
+    <script src="../../../js/script.js"></script> <!-- Your custom scripts -->
     <!-- DataTables JS -->
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
     <!-- Your custom script -->
