--- a/science/blobs/catalog/index.html
+++ b/science/blobs/catalog/index.html
@@ -11,7 +11,8 @@
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:400,300%7CMontserrat:400,700">
     <link rel="stylesheet" href="../../../css/style.css">
-    <!-- Include any additional CSS needed for the catalog (e.g., DataTables) -->
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
 
@@ -50,7 +51,7 @@
         <div class="shell shell-wide">
           <div class="range range-md-middle">
             <div class="cell-md-6">
-              <a href="../../" class="brand">
+              <a href="../../../" class="brand">
                 <img src="../../../images/lya_blob.jpg" alt="" class="img-responsive">
               </a>
             </div>
@@ -158,6 +159,10 @@
     <script src="../../../js/script.js"></script> <!-- Your custom scripts -->
     <!-- DataTables JS -->
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+    <!-- jQuery (required for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Your custom script -->
     <script src="catalog.js"></script>
   </body>
