--- a/science/blobs/index.html
+++ b/science/blobs/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <!-- Java script-->
-    <script src="../js/core.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../../js/core.min.js"></script>
+    <script src="../../js/script.js"></script>
   </body>
 </html>
