--- a/science/blobs/catalog/index.html
+++ b/science/blobs/catalog/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation">
   <head>
     <!-- Site Title-->
-    <title>Catalog</title>
+    <title>LAB Catalog</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
