--- a/science/blobs/index.html
+++ b/science/blobs/index.html
@@ -26,6 +26,18 @@
             <div class="cell-md-6"><a href="../../" class="brand"><img src="../../images/home.png" width="75" height="75" alt="" class="img-responsive"></a></div>
           </div>
         </div>
+        <div class="shell shell-wide">
+          <div class="range range-md-middle">
+            <div class="cell-md-6">
+              <a href="../../../" class="brand">
+                <img src="../../../images/lya_blob.jpg" alt="" class="img-responsive">
+              </a>
+            </div>
+            <div class="cell-md-6 text-md-right">
+              <!-- Additional header content if needed -->
+            </div>
+          </div>
+        </div>
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
