--- a/science/blobs/index.html
+++ b/science/blobs/index.html
@@ -41,14 +41,14 @@
         <div id="home" data-type="anchor" class="shell shell-wide">
           <div class="range">
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
-              <h1><b><u>My Work on Lyman-alpha Blobs<br class="hidden visible-lg-inline-block"></u></b>
+              <h1><b><u>Lyman-alpha Blobs<br class="hidden visible-lg-inline-block"></u></b>
               </h1>
               &nbsp;
               &nbsp;
               &nbsp;
  
-              <font size="+3"><p><b><a href="catalog">LAB COSMOS Catalog</a></b></p>
-              <p><b><a href="https://github.com/Professor-G">My PhD Thesis</a></b></p>
+              <font size="+3"><p><b><a href="catalog">LAB Catalog</a></b></p>
+              <p><b><a href="https://github.com/Professor-G">Dissertation</a></b></p>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-1 text-md-right cell-md-bottom cell-xl-preffix-3">
               <!--<div class="count count-white offset-xl-bottom--45 preffix-xl-left--5"></div>-->
