update table with proba

--- a/science/blobs/catalog/index.html
+++ b/science/blobs/catalog/index.html
@@ -42,7 +42,7 @@
                 <thead>
                   <tr>
                     <th>Object Name</th>
-                    <th>Field Name</th>
+                    <th>Proba</th>
                     <th>RA</th>
                     <th>DEC</th>
                     <th>Mag G</th>
