--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">Fascinated by the computational techniques driving big data astronomy, I apply machine learning to detect rare astrophysical phenomena like <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> My work spans time-domain classification, anomaly detection, and simulations of turbulence and particle–gas dynamics. All projects are open-source under the GNU General Public License and available on GitHub.</b></a></p>
+              <p class="big postfix-xl-right--30">Fascinated by the computational techniques driving big data astronomy, I apply machine learning to detect rare astrophysical phenomena like <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> My work spans time-domain classification, anomaly detection, and simulations of turbulence and particle–gas dynamics. All projects are open-source under the GNU General Public License and available on <a href="https://github.com/Professor-G"><b>GitHub.</b></a></p>
 
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
@@ -101,63 +101,120 @@
           </section>
 
         <!-- Interests-->
-          <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-          <div id="team" data-type="anchor" class="shell shell-wide">
-            <div class="range range-lg-bottom range-xl-top">
-              <div class="cell-lg-preffix-1 cell-lg-2">
-                <!--<div class="count"></div>-->
-              </div>
-              <div class="cell-lg-4 offset-xl-top-60">
-                <h2 class="heading heading-custom">Interests</h2>
-              </div>
-              <div class="cell-lg-6"></div>
-            </div>
-            <div class="range range-sm-center range-lg-left">
-              <div class="cell-sm-4 cell-lg-2 cell-xl-preffix-1"><a href="science/microlensing"><img src="images/microlensing_250.jpg" alt="" class="img-responsive"></a>
-                <!--<h5>Gravitational Lensing<br class="hidden visible-lg">
-                </h5>-->
-                <h4><a href="science/green-beans"><img src="images/green_bean_250.jpg" alt="" class="img-responsive"></a>
-                <h4>
-              </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/blobs"><img src="images/blob_250.jpg" alt="" class="img-responsive"></a>
-                <!--<h5>Lyman-alpha Blobs<br class="hidden visible-lg">
-                </h5>-->
-               <h4><a href="science/planet9"><img src="images/planet9_250.jpg" alt="" class="img-responsive"></a>
-               <h4>
-              </div>
-              <div class="cell-sm-4 cell-lg-2 offset-top-45 offset-sm-top-0"><a href="science/slime-mold"><img src="images/mold_250.jpg" alt="" class="img-responsive"></a>
-                <!--<h5>Planet 9<br class="hidden visible-lg">
-                </h5>-->
-               <h4><a href="science/yum"><img src="images/fluffy_250.jpg" alt="" class="img-responsive"></a>
-               <h4>
-              </div>
-              <div class="cell-sm-8 offset-top-40 offset-sm-top-50 cell-lg-6 offset-lg-top-0 cell-xl-preffix-1 cell-xl-4 offset-xl-top--20 section-xl-bottom-0">
-                <div class="box-wrap-1">
-                  <div class="box-wrap-1-caption">
-                    <div class="h2 heading heading-mod"></div>
-                    <div class="h7"><br><b><font size="+1">Click on the images to learn about my current pursuits! </font></b></div>
-                  </div>
-                  <div class="box-wrap-1-caption">
-                    <div class="h2 heading heading-mod"></div>
-                  </div>
+        <!-- Updated Interests Section: single-column layout with image and paragraph side by side -->
+        <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
+          <div class="shell shell-wide">
+            <h2 class="heading heading-custom text-center">Interests</h2>
+            <div class="interests-list">
+
+              <!-- Interest Item 1 -->
+              <div class="interest-item">
+                <a href="science/microlensing" class="interest-img">
+                  <img src="images/microlensing_250.jpg" alt="Microlensing" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/microlensing">Microlensing</a></h4>
+                  <p>Summary...</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="shell shell-wide">
-            <div class="range range-md-around range-sm-reverse">
-              <div class="col-sm-4 cell-lg-preffix-4 cell-lg-3 text-lg-center offset-xl-top--20 cell-md-2">
-                <!--<div class="count count-white"></div>-->
+
+              <!-- Interest Item 2 -->
+              <div class="interest-item">
+                <a href="science/green-beans" class="interest-img">
+                  <img src="images/green_bean_250.jpg" alt="Green Beans" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/green-beans">Green Bean Galaxies</a></h4>
+                  <p>Summary...</p>
+                </div>
               </div>
-              <div class="col-sm-8 cell-lg-preffix-1 cell-lg-4 cell-md-8">
-                <h2 class="heading">Tutorials</h2>
-                <p class="inset-xl-right-80">
-                  I post machine learning tutorials in the context of astronomy research, check them out <b><a href="machine-learning">here.</a></b> If you have any questions or suggestions, please <b><a href=#contacts>contact me.</a></b>
-                </p>
+
+              <!-- Interest Item 3 -->
+              <div class="interest-item">
+                <a href="science/blobs" class="interest-img">
+                  <img src="images/blob_250.jpg" alt="Lyman-alpha Blobs" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/blobs">Lyman‑alpha Blobs</a></h4>
+                  <p>Summary...</p>
+                </div>
               </div>
+
+              <!-- Interest Item 4 -->
+              <div class="interest-item">
+                <a href="science/planet9" class="interest-img">
+                  <img src="images/planet9_250.jpg" alt="Planet 9" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/planet9">Planet 9</a></h4>
+                  <p>Summary...</p>
+                </div>
+              </div>
+
+              <!-- Interest Item 5 -->
+              <div class="interest-item">
+                <a href="science/slime-mold" class="interest-img">
+                  <img src="images/mold_250.jpg" alt="Slime Mold" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/slime-mold">Slime Mold Modeling</a></h4>
+                  <p>Summary...</p>
+                </div>
+              </div>
+
+              <!-- Interest Item 6 -->
+              <div class="interest-item">
+                <a href="science/yum" class="interest-img">
+                  <img src="images/fluffy_250.jpg" alt="Fluffy Astrophysics" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/yum">Fluffy Astrophysics</a></h4>
+                  <p>Food!</p>
+                </div>
+              </div>
+
             </div>
           </div>
         </section>
+
+        <!-- Styles specific to Interests section -->
+        <style>
+          .interests-list {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem; /* space between items */
+          }
+
+          .interest-item {
+            display: flex;
+            align-items: center;
+          }
+
+          .interest-img img {
+            max-width: 160px;
+            height: auto;
+            border-radius: 8px;
+            margin-right: 1.5rem;
+          }
+
+          .interest-content h4 {
+            margin-top: 0;
+            margin-bottom: 0.5rem;
+          }
+
+          /* Mobile responsiveness */
+          @media (max-width: 768px) {
+            .interest-item {
+              flex-direction: column;
+              text-align: center;
+            }
+
+            .interest-img img {
+              margin-right: 0;
+              margin-bottom: 1rem;
+            }
+          }
+        </style>
         <!-- Space news-->
         <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div class="shell shell-wide">
