--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
         <!-- Updated Interests Section: single-column layout with image and paragraph side by side -->
         <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div class="shell shell-wide">
+            <!-- Caption above heading -->
+            <div class="text-center mb-3">
+              <span class="h7"><b><font size="+1">Click on the images to learn about my current pursuits!</font></b></span>
+            </div>
+
             <h2 class="heading heading-custom text-center">Interests</h2>
+
             <div class="interests-list">
 
               <!-- Interest Item 1 -->
@@ -135,7 +141,7 @@
                   <img src="images/blob_250.jpg" alt="Lyman-alpha Blobs" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/blobs">Lyman‑alpha Blobs</a></h4>
+                  <h4><a href="science/blobs">During my PhD, I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</a></h4>
                   <p>Summary...</p>
                 </div>
               </div>
@@ -146,7 +152,7 @@
                   <img src="images/planet9_250.jpg" alt="Planet 9" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/planet9">Planet 9</a></h4>
+                  <h4><a href="science/planet9">Planet 9</a></h4>
                   <p>Summary...</p>
                 </div>
               </div>
@@ -157,7 +163,7 @@
                   <img src="images/mold_250.jpg" alt="Slime Mold" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/slime-mold">Slime Mold Modeling</a></h4>
+                  <h4><a href="science/slime-mold">Slime Mold Modeling</a></h4>
                   <p>Summary...</p>
                 </div>
               </div>
@@ -169,15 +175,23 @@
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/yum">Fluffy Astrophysics</a></h4>
-                  <p>Food!</p>
+                  <p>Insert a short, inviting description of this interest area—perhaps a playful research pursuit!</p>
                 </div>
               </div>
 
+            </div> <!-- /.interests-list -->
+
+            <!-- Tutorials Section -->
+            <div class="tutorials-section mt-5">
+              <h2 class="heading text-center">Tutorials</h2>
+              <p class="text-center inset-xl-right-80">
+                I post machine learning tutorials in the context of astronomy research, check them out <b><a href="machine-learning">here.</a></b> If you have any questions or suggestions, please <b><a href="#contacts">contact me.</a></b>
+              </p>
             </div>
-          </div>
+          </div> <!-- /.shell -->
         </section>
 
-        <!-- Styles specific to Interests section -->
+        <!-- Styles specific to Interests & Tutorials section -->
         <style>
           .interests-list {
             display: flex;
