--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/microlensing">Microlensing</a></h4>
-                  <p>Summary...</p>
+                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine learning classifiers for microlensing detection in wide-field, low-cadence surveys.</p>
                 </div>
               </div>
 
@@ -141,8 +141,8 @@
                   <img src="images/blob_250.jpg" alt="Lyman-alpha Blobs" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/blobs">During my PhD, I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</a></h4>
-                  <p>Summary...</p>
+                  <h4><a href="science/blobs">Lyman-alpha Blobs</a></h4>
+                  <p>During my PhD, I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</p>
                 </div>
               </div>
 
@@ -152,8 +152,8 @@
                   <img src="images/planet9_250.jpg" alt="Planet 9" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/planet9">Planet 9</a></h4>
-                  <p>Summary...</p>
+                  <h4><a href="science/planet9">Protoplanetary Disks</a></h4>
+                  <p>I have conducted theoretical work on solid concentration and planetesimal formation in turbulent disks. I used 3D self-gravitating simulations of the streaming instability to show that overdense filaments generate optically thick sub-millimeter emission, leading to significant underestimates of disk mass when standard optically thin assumptions are applied. This work combined large-scale numerical modeling on HPC systems with radiative transfer post-processing, including dust scattering, to produce synthetic ALMA observables and quantify the mass bias introduced by unresolved small-scale structure.</p>
                 </div>
               </div>
 
@@ -163,8 +163,8 @@
                   <img src="images/mold_250.jpg" alt="Slime Mold" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/slime-mold">Slime Mold Modeling</a></h4>
-                  <p>Summary...</p>
+                  <h4><a href="science/slime-mold">Dark Matter</a></h4>
+                  <p>I have also contributed to dark matter research, using microlensing as a probe of compact dark objects. In one study, we projected LSST constraints on the abundance of primordial black holes (PBHs) as a dark matter component, demonstrating that control of the false positive rate is critical for achieving competitive limits. By simulating realistic light curves and evaluating classifiers based on χ², Boosted Decision Trees, and Bayesian-based model selection, we showed how machine learning can enhance PBH sensitivity in next-generation time-domain surveys. In related work, we applied unsupervised anomaly detection to identify microlensing events directly from LSST-like light curves, enabling real-time filtering of rare transients -- including those caused by compact dark matter -- with minimal assumptions about signal shape.</p>
                 </div>
               </div>
 
