--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/microlensing">Microlensing</a></h4>
-                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine learning classifiers for microlensing detection in wide-field, low-cadence surveys.</p>
+                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine learning classifiers for microlensing detection in wide-field, low-cadence surveys. I am an active member of the LSST microlensing science collaboration, where I continue to lead the development of MicroLIA and support efforts to detect and characterize microlensing events in LSST data.</p>
                 </div>
               </div>
 
@@ -149,7 +149,7 @@
               <!-- Interest Item 4 -->
               <div class="interest-item">
                 <a href="science/planet9" class="interest-img">
-                  <img src="images/planet9_250.jpg" alt="Planet 9" class="img-responsive">
+                  <img src="images/protodisk_250.jpg" alt="Protostellar Disks" class="img-responsive">
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/planet9">Protoplanetary Disks</a></h4>
@@ -160,7 +160,7 @@
               <!-- Interest Item 5 -->
               <div class="interest-item">
                 <a href="science/slime-mold" class="interest-img">
-                  <img src="images/mold_250.jpg" alt="Slime Mold" class="img-responsive">
+                  <img src="images/dark_matter_250.jpg" alt="Slime Mold" class="img-responsive">
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/slime-mold">Dark Matter</a></h4>
